Quorum3/Library/Tests/TypeChecker/Fail/ExpAssignIntegerTextObj.quorum
class Main
    action Main
        Text t
        integer int
        t:SetValue("5")
        int = cast(integer, t)
    end
end
